--- a/digitalmarketing.html
+++ b/digitalmarketing.html
@@ -30,8 +30,8 @@
 </head>
 
 <body style="font-family: 'Merriweather', serif;" id="#home">
-    <audio src="./media/Beauty And A Beat - Justin Bieber (Alex Goot, Kurt Schneider, and Chrissy Costanza Cover).mp3"
-        autoplay></audio>
+    <!-- <audio src="./media/Beauty And A Beat - Justin Bieber (Alex Goot, Kurt Schneider, and Chrissy Costanza Cover).mp3"
+        autoplay></audio> -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center"
         style="padding: 0px; box-shadow: 5px 5px 15px lightgray; font-family: 'Tenor Sans', sans-serif;">
        <div>
