--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-0 justify-center sm:justify-start">
-                <a href="https://api.whatsapp.com/send?phone=917976391232"><button type="button" class="btn btn-primary btn-lg" style="position: absolute; right: 40px;bottom: 18px;">Contact Now</button></a> 
+                <a href="https://api.whatsapp.com/send?phone=917976391232"><button type="button" id="dmbutton" class="btn btn-primary btn-lg" style="position: absolute; right: 40px;bottom: 18px;">Contact Now</button></a> 
 
                 <!-- <a class="text-gray-500">
                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -150,7 +150,7 @@
 
         </section>
         <hr>
-        <section class="text-gray-700 body-font" style="background-image: url('./media/appbg.png'); color: white;">
+        <section class="text-gray-700 body-font" style="background-image: url('./media/appbg.png'); padding:50px; color: white;">
             <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                 <div data-aos="fade-down-right"
                     class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
@@ -200,7 +200,7 @@
 
         </section>
         <hr>
-        <section class="text-gray-700 body-font" style="background-image: url('./media/appbg.png'); color: white;">
+        <section class="text-gray-700 body-font" style="background-image: url('./media/appbg.png'); padding:50px; color: white;">
             <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                 <div data-aos="fade-down-right"
                     class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
@@ -225,7 +225,7 @@
         <section class="text-gray-700 body-font">
 
         </section>
-        <section class="text-gray-700 body-font">
+        <section class="text-gray-700 body-font" style="padding: 50px;">
             <div class="container px-5 py-24 mx-auto">
                 <div class="flex flex-col text-center w-full mb-20">
                     <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"
