--- a/digitalmarketing.html
+++ b/digitalmarketing.html
@@ -522,8 +522,7 @@
 
                                     <i class="fas fa-thumbs-up fa-3x"></i>
                                 </div>
-                                <h1 class="text-lg text-gray-900 font-medium title-font mb-2">5+ years of Average
-                                    Experience.</h1>
+                                <h1 class="text-lg text-gray-900 font-medium title-font mb-2">High Quality Work</h1>
                                     <br>
                             </div>
                         </div>
