--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
 
@@ -157,7 +157,7 @@
                     <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white-900">App Development
 
                     </h1>
-                    <p class="mb-8 leading-relaxed text-left">Mobile app development is the act or process by which a
+                    <p class="mb-8 leading-relaxed text-left" style="width:167%;">Mobile app development is the act or process by which a
                         mobile app is
                         developed for mobile devices. AVIPL also provide App based solutions to its customers.
                         We deliver all kind of apps based on client's requirements. Get an App ready for your business
@@ -204,10 +204,10 @@
             <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                 <div data-aos="fade-down-right"
                     class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-                    <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white-900">Graphic Design
+                    <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white-900" >Graphic Design
 
                     </h1>
-                    <p class="mb-8 leading-relaxed text-left">Graphic design is the
+                    <p class="mb-8 leading-relaxed text-left" style="width: 153%;">Graphic design is the
                         process of visual communication through the use of typography, photography, iconography and
                         illustration. If you want Cool Logos, Posteres, Digital Advertisements. We have
                         a dedicated team of Graphic Designer to get your work done like charm. </p>
@@ -327,7 +327,7 @@
         <section class="text-gray-700 body-font" id="about">
             <div class="container px-5 py-24 mx-auto">
                 <div class="flex flex-col text-center w-full mb-20">
-                    <h1 class="text-center " style="font-size: 60px; color: darkblue;">OUR TEAM</h1>
+                    <h1 class="text-center " style="font-size: 60px; color: darkblue; margin-top: 20px;">OUR TEAM</h1>
                     <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-black">
                 </div>
                 <div class="flex flex-wrap -m-4" data-aos="zoom-out">
@@ -517,7 +517,7 @@
             </div>
             <div class="container px-5 py-24 mx-auto flex" id="contactbox">
                 <div
-                    class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
+                   style="width: 109%;" class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
                     <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Call us</h2>
                     <p class="leading-relaxed mb-5 text-gray-600">+91-7976391232(Harsh Sharma),<br>+91-9785362691(Harish
                         Bhardwaj)</p>
