--- a/website.html
+++ b/website.html
@@ -116,7 +116,7 @@
 
         <h1 style="color: white; text-shadow: 1px 1px 1px lightgray;">Get Website for Your Business.
         </h1>
-        <p style="font-size: 20px ; color: white;">Beautiful Looking Websites for your Business.</p>
+        <p style="font-size: 20px ; color: white;" id="phonewebtext">Beautiful Looking Websites for your Business.</p>
         <p style="font-size: 20px ;" id="app"></p>
         <br>
        <a href="https://api.whatsapp.com/send?phone=917976391232"><button type="button" class="btn btn-primary btn-lg">Get Yours Now</button></a>
@@ -546,14 +546,13 @@
 
             <div class="flex flex-wrap -m-4">
                 <div class="xl:w-1/3 md:w-1/2 p-4">
-                    <div class="border border-gray-200 p-6 rounded-lg">
+                    <div class="border border-gray-200 p-6 rounded-lg" style="margin-top: 0px;">
                         <div
                             class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4">
 
                             <i class="fas fa-thumbs-up fa-3x"></i>
                         </div>
-                        <h1 class="text-lg text-gray-900 font-medium title-font mb-2">5+ years of Average
-                            Experience.</h1>
+                        <h1 class="text-lg text-gray-900 font-medium title-font mb-2">High Quality Work</h1>
                             <br>
                             
                     </div>
