--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <p class="mb-8 leading-relaxed text-left" style="width:167%;">Mobile app development is the act or process by which a
                         mobile app is
                         developed for mobile devices. AVIPL also provide App based solutions to its customers.
-                        We deliver all kind of apps based on client's requirements. Get an App ready for your business
+                        We deliver all kind of apps based on client's requirements. <br>Get an App ready for your business
                         and grow your business. </p>
                     <a href="./app.html"><button type="button" class="btn btn-primary btn-lg" style="font-size: 25px;" style="font-size: 25px;">Hire us</button></a>
 
@@ -209,7 +209,7 @@
                     </h1>
                     <p class="mb-8 leading-relaxed text-left" style="width: 153%;">Graphic design is the
                         process of visual communication through the use of typography, photography, iconography and
-                        illustration. If you want Cool Logos, Posteres, Digital Advertisements. We have
+                        illustration. If you <br>want Cool Logos, Posteres, Digital Advertisements. We have
                         a dedicated team of Graphic Designer to get your work done like charm. </p>
                    <a href="https://api.whatsapp.com/send?phone=917976391232"><button type="button" class="btn btn-primary btn-lg" style="font-size: 25px;">Hire us</button></a>
 
