--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="p-4 lg:w-1/2">
+<!--                     <div class="p-4 lg:w-1/2">
                         <div
                             class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
                             <img alt="team"
@@ -418,7 +418,7 @@
                                 </span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="p-4 lg:w-1/2">
                         <div
                             class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
