--- a/index.html
+++ b/index.html
@@ -509,17 +509,17 @@
         </section>
         <hr style="lightgray;">
         <section class="text-gray-700 body-font relative" id="contact">
-            <div class="absolute inset-0 bg-gray-300">
+<!--             <div class="absolute inset-0 bg-gray-300">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3516.2917846177556!2d76.81044601507287!3d28.198446282591075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa7f15be9cbf2c948!2sAVIPL!5e0!3m2!1sen!2sin!4v1607928359211!5m2!1sen!2sin"
                     width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
-            </div>
+            </div> -->
             <div class="container px-5 py-24 mx-auto flex" id="contactbox">
                 <div
                    style="width: 109%;" class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
                     <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Call us</h2>
-                    <p class="leading-relaxed mb-5 text-gray-600">+91-7976391232(Harsh Sharma),<br>+91-9785362691(Harish
+                    <p class="leading-relaxed mb-5 text-gray-600"><br>+91-9785362691(Harish
                         Bhardwaj)</p>
                     <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Email us</h2>
                     <p class="leading-relaxed mb-5 text-gray-600">e-businessinnovator@avipl.in</p>
