--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
                     </li>
+                   
                     <li class="nav-item">
                         <a class="nav-link" href="#ourservices">Our Services</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
@@ -60,7 +60,7 @@
             </div>
 
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-0 justify-center sm:justify-start">
-                <a href="https://api.whatsapp.com/send?phone=917976391232"><button type="button" id="dmbutton" class="btn btn-primary btn-lg" style="position: absolute; right: 40px;bottom: 18px;">Contact Now</button></a> 
+                <a href="https://api.whatsapp.com/send?phone=919785362691"><button type="button" id="dmbutton" class="btn btn-primary btn-lg" style="position: absolute; right: 40px;bottom: 18px;">Contact Now</button></a> 
 
                 <!-- <a class="text-gray-500">
                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -99,7 +99,7 @@
 
 
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide rellax" data-ride="carousel" data-rellax-speed="-5"
+    <div id="carouselExampleSlidesOnly" class="carousel slide " data-ride="carousel" data-rellax-speed="-5"
         style="margin-top: 4px;">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -120,7 +120,7 @@
     </div>
     <br>
     <br>
-    <div class="cooldiv rellax" data-rellax-speed="1">
+    <div class="cooldivhome" data-rellax-speed="1">
 
         <section class="text-gray-700 body-font" id="ourservices">
             <br><br>
@@ -157,7 +157,7 @@
                     <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white-900">App Development
 
                     </h1>
-                    <p class="mb-8 leading-relaxed text-left" style="width:167%;">Mobile app development is the act or process by which a
+                    <p style="max-width: 40vw;" class="mb-8 leading-relaxed text-left" style="width:167%;">Mobile app development is the act or process by which a
                         mobile app is
                         developed for mobile devices. AVIPL also provide App based solutions to its customers.
                         We deliver all kind of apps based on client's requirements. <br>Get an App ready for your business
@@ -207,9 +207,9 @@
                     <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white-900" >Graphic Design
 
                     </h1>
-                    <p class="mb-8 leading-relaxed text-left" style="width: 153%;">Graphic design is the
+                    <p style="max-width: 40vw;" class="mb-8 leading-relaxed text-left" style="width: 153%;">Graphic design is the
                         process of visual communication through the use of typography, photography, iconography and
-                        illustration. If you <br>want Cool Logos, Posteres, Digital Advertisements. We have
+                        illustration. If you want Cool Logos, Posteres, Digital Advertisements. We have
                         a dedicated team of Graphic Designer to get your work done like charm. </p>
                    <a href="https://api.whatsapp.com/send?phone=917976391232"><button type="button" class="btn btn-primary btn-lg" style="font-size: 25px;">Hire us</button></a>
 
@@ -529,7 +529,13 @@
                     <div class="relative mb-4">
 
                     </div>
-                    <p class="text-xs text-gray-500 mt-3">For more Information, you can visit us.</p>
+                    <p class=" text-gray-500 mt-3" style="font-size: 30px;">For more Information, you can visit us at</p>
+                    <p class=" text-gray-500 mt-3" style="font-size: 20px;">Plot No.19, G1-Block, South City -II, Gurugram
+                        Haryana
+                        India or Shop No-6, BB Mall, Bhiwadi, Rajasthan 301019 or 
+                        New Location coming at</p> <p class=" text-gray-500 mt-3 style="font-size: 20px;"> Neemrana Central, CC-12, RIICO Industrial Area, Phase I, Neemrana, Rajasthan 301705</p>
+                        
+
                 </div>
             </div>
         </section>
