--- a/index.html
+++ b/index.html
@@ -519,8 +519,7 @@
                 <div
                    style="width: 109%;" class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
                     <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Call us</h2>
-                    <p class="leading-relaxed mb-5 text-gray-600"><br>+91-9785362691(Harish
-                        Bhardwaj)</p>
+                    <p class="leading-relaxed mb-5 text-gray-600"><br>+91-9785362691</p>
                     <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Email us</h2>
                     <p class="leading-relaxed mb-5 text-gray-600">e-businessinnovator@avipl.in</p>
                     <div class="relative mb-4">
